lib/src/ffi/autogest_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings FFI gerados a partir de native/autogest.h
class AutogestBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AutogestBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AutogestBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// ==================================================================== *
  /// GRUPO 1 — DADOS   (src/dados.c)
  /// Preenchem e retornam uma struct. Nao validam — a validacao e feita
  /// antes, pelas funcoes do Grupo 2.
  /// ====================================================================
  Veiculo criar_veiculo(
    ffi.Pointer<ffi.Char> nome,
    ffi.Pointer<ffi.Char> placa,
    ffi.Pointer<ffi.Char> marca,
    ffi.Pointer<ffi.Char> modelo,
    int ano,
  ) {
    return _criar_veiculo(nome, placa, marca, modelo, ano);
  }

  late final _criar_veiculoPtr =
      _lookup<
        ffi.NativeFunction<
          Veiculo Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('criar_veiculo');
  late final _criar_veiculo = _criar_veiculoPtr
      .asFunction<
        Veiculo Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  Abastecimento criar_abastecimento(
    int id,
    int data,
    double litros,
    double valor_total,
    double km,
    ffi.Pointer<ffi.Char> combustivel,
  ) {
    return _criar_abastecimento(id, data, litros, valor_total, km, combustivel);
  }

  late final _criar_abastecimentoPtr =
      _lookup<
        ffi.NativeFunction<
          Abastecimento Function(
            ffi.Int,
            ffi.Int64,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('criar_abastecimento');
  late final _criar_abastecimento = _criar_abastecimentoPtr
      .asFunction<
        Abastecimento Function(
          int,
          int,
          double,
          double,
          double,
          ffi.Pointer<ffi.Char>,
        )
      >();

  Manutencao criar_manutencao(
    int id,
    TipoManutencao tipo,
    ffi.Pointer<ffi.Char> descricao,
    int data_realizada,
    double custo,
    int intervalo_dias,
  ) {
    return _criar_manutencao(
      id,
      tipo.value,
      descricao,
      data_realizada,
      custo,
      intervalo_dias,
    );
  }

  late final _criar_manutencaoPtr =
      _lookup<
        ffi.NativeFunction<
          Manutencao Function(
            ffi.Int,
            ffi.UnsignedInt,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Double,
            ffi.Int,
          )
        >
      >('criar_manutencao');
  late final _criar_manutencao = _criar_manutencaoPtr
      .asFunction<
        Manutencao Function(int, int, ffi.Pointer<ffi.Char>, int, double, int)
      >();

  /// ==================================================================== *
  /// GRUPO 2 — VALIDACAO   (src/validacao.c)
  /// Retornam int (CodigoErro): SUCESSO (0) ou um codigo negativo.
  /// ====================================================================
  int validar_km(double km_novo, double km_anterior) {
    return _validar_km(km_novo, km_anterior);
  }

  late final _validar_kmPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Double, ffi.Double)>>(
        'validar_km',
      );
  late final _validar_km = _validar_kmPtr
      .asFunction<int Function(double, double)>();

  int validar_data(int data) {
    return _validar_data(data);
  }

  late final _validar_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int64)>>('validar_data');
  late final _validar_data = _validar_dataPtr.asFunction<int Function(int)>();

  int validar_valor(double valor) {
    return _validar_valor(valor);
  }

  late final _validar_valorPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Double)>>(
        'validar_valor',
      );
  late final _validar_valor = _validar_valorPtr
      .asFunction<int Function(double)>();

  int validar_litros(double litros) {
    return _validar_litros(litros);
  }

  late final _validar_litrosPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Double)>>(
        'validar_litros',
      );
  late final _validar_litros = _validar_litrosPtr
      .asFunction<int Function(double)>();

  int validar_intervalo_dias(int dias) {
    return _validar_intervalo_dias(dias);
  }

  late final _validar_intervalo_diasPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'validar_intervalo_dias',
      );
  late final _validar_intervalo_dias = _validar_intervalo_diasPtr
      .asFunction<int Function(int)>();

  int validar_string(ffi.Pointer<ffi.Char> str) {
    return _validar_string(str);
  }

  late final _validar_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'validar_string',
      );
  late final _validar_string = _validar_stringPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int editar_veiculo(
    ffi.Pointer<Veiculo> v,
    ffi.Pointer<ffi.Char> campo,
    ffi.Pointer<ffi.Char> valor,
  ) {
    return _editar_veiculo(v, campo, valor);
  }

  late final _editar_veiculoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<Veiculo>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('editar_veiculo');
  late final _editar_veiculo = _editar_veiculoPtr
      .asFunction<
        int Function(
          ffi.Pointer<Veiculo>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int editar_abastecimento(
    ffi.Pointer<Abastecimento> a,
    ffi.Pointer<ffi.Char> campo,
    ffi.Pointer<ffi.Char> valor,
  ) {
    return _editar_abastecimento(a, campo, valor);
  }

  late final _editar_abastecimentoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<Abastecimento>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('editar_abastecimento');
  late final _editar_abastecimento = _editar_abastecimentoPtr
      .asFunction<
        int Function(
          ffi.Pointer<Abastecimento>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int editar_manutencao(
    ffi.Pointer<Manutencao> m,
    ffi.Pointer<ffi.Char> campo,
    ffi.Pointer<ffi.Char> valor,
  ) {
    return _editar_manutencao(m, campo, valor);
  }

  late final _editar_manutencaoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<Manutencao>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('editar_manutencao');
  late final _editar_manutencao = _editar_manutencaoPtr
      .asFunction<
        int Function(
          ffi.Pointer<Manutencao>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// ==================================================================== *
  /// GRUPO 3 — CALCULOS   (src/calculos.c)
  /// Recebem vetores de registros (vindos do banco) e devolvem valores.
  /// ====================================================================
  double calcular_custo_por_km(
    ffi.Pointer<Abastecimento> lista,
    int total,
    double km_inicio,
    double km_fim,
  ) {
    return _calcular_custo_por_km(lista, total, km_inicio, km_fim);
  }

  late final _calcular_custo_por_kmPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Double Function(
            ffi.Pointer<Abastecimento>,
            ffi.Int,
            ffi.Double,
            ffi.Double,
          )
        >
      >('calcular_custo_por_km');
  late final _calcular_custo_por_km = _calcular_custo_por_kmPtr
      .asFunction<
        double Function(ffi.Pointer<Abastecimento>, int, double, double)
      >();

  double calcular_gasto_periodo(
    ffi.Pointer<Abastecimento> lista,
    int total,
    int inicio,
    int fim,
  ) {
    return _calcular_gasto_periodo(lista, total, inicio, fim);
  }

  late final _calcular_gasto_periodoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Double Function(
            ffi.Pointer<Abastecimento>,
            ffi.Int,
            ffi.Int64,
            ffi.Int64,
          )
        >
      >('calcular_gasto_periodo');
  late final _calcular_gasto_periodo = _calcular_gasto_periodoPtr
      .asFunction<double Function(ffi.Pointer<Abastecimento>, int, int, int)>();

  double calcular_km_por_litro(
    double km_atual,
    double km_anterior,
    double litros,
  ) {
    return _calcular_km_por_litro(km_atual, km_anterior, litros);
  }

  late final _calcular_km_por_litroPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Double Function(ffi.Double, ffi.Double, ffi.Double)
        >
      >('calcular_km_por_litro');
  late final _calcular_km_por_litro = _calcular_km_por_litroPtr
      .asFunction<double Function(double, double, double)>();

  double obter_km_atual(ffi.Pointer<Abastecimento> lista, int total) {
    return _obter_km_atual(lista, total);
  }

  late final _obter_km_atualPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<Abastecimento>, ffi.Int)
        >
      >('obter_km_atual');
  late final _obter_km_atual = _obter_km_atualPtr
      .asFunction<double Function(ffi.Pointer<Abastecimento>, int)>();

  double calcular_km_por_litro_geral(
    ffi.Pointer<Abastecimento> lista,
    int total,
  ) {
    return _calcular_km_por_litro_geral(lista, total);
  }

  late final _calcular_km_por_litro_geralPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<Abastecimento>, ffi.Int)
        >
      >('calcular_km_por_litro_geral');
  late final _calcular_km_por_litro_geral = _calcular_km_por_litro_geralPtr
      .asFunction<double Function(ffi.Pointer<Abastecimento>, int)>();

  ResumoGastos calcular_resumo_gastos(
    ffi.Pointer<Abastecimento> abastecimentos,
    int total_abast,
    ffi.Pointer<Manutencao> manutencoes,
    int total_manut,
  ) {
    return _calcular_resumo_gastos(
      abastecimentos,
      total_abast,
      manutencoes,
      total_manut,
    );
  }

  late final _calcular_resumo_gastosPtr =
      _lookup<
        ffi.NativeFunction<
          ResumoGastos Function(
            ffi.Pointer<Abastecimento>,
            ffi.Int,
            ffi.Pointer<Manutencao>,
            ffi.Int,
          )
        >
      >('calcular_resumo_gastos');
  late final _calcular_resumo_gastos = _calcular_resumo_gastosPtr
      .asFunction<
        ResumoGastos Function(
          ffi.Pointer<Abastecimento>,
          int,
          ffi.Pointer<Manutencao>,
          int,
        )
      >();

  /// ==================================================================== *
  /// GRUPO 4 — MOTOR DE ALERTAS   (src/alertas.c)
  /// gerar_lista_alertas aloca com malloc; o chamador libera com
  /// liberar_lista_alertas (seguro chamar com NULL).
  /// ====================================================================
  int calcular_dias_restantes(
    int data_realizada,
    int intervalo_dias,
    int hoje,
  ) {
    return _calcular_dias_restantes(data_realizada, intervalo_dias, hoje);
  }
